Mid-cycle checkin

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -2165,6 +2165,7 @@ botania {
     B:forestDrum=false
     B:forestDrum.1=false
     B:forestEye=false
+    B:incensePlate=false
     B:livingrock=true
     B:livingrock.1=true
     B:livingrock.2=true
@@ -3913,6 +3914,51 @@ computronics {
 }
 
 
+customitems {
+    B:acaciafence=false
+    B:andesite=true
+    B:birchfence=false
+    B:bluesand=true
+    B:chiseleddarkquartz=true
+    B:chiseledredsandstone=true
+    B:coarsedirt=true
+    B:customglass=false
+    B:customglassfence=false
+    B:customglasspane=false
+    B:customglassslab=false
+    B:customglassstairs=false
+    B:customglasswall=false
+    B:darkoakfence=false
+    B:darkprismarine=true
+    B:darkquartz=true
+    B:darkquartzpillar=true
+    B:diorite=true
+    B:doublecustomglassslab=false
+    B:doubleredsandstoneslab=true
+    B:granite=true
+    B:greeni=false
+    B:greensand=true
+    B:junglefence=false
+    B:novalava=false
+    B:novawater=false
+    B:pinksand=true
+    B:polishedandesite=true
+    B:polisheddiorite=true
+    B:polishedgranite=true
+    B:prismarine=true
+    B:prismarinebricks=true
+    B:redsand=true
+    B:redsandstone=true
+    B:redsandstoneslab=false
+    B:redsandstonestairs=false
+    B:sealantern=true
+    B:singleitemchest=false
+    B:smoothredsandstone=true
+    B:sprucefence=false
+    B:tower=false
+}
+
+
 dcsapplemilk {
     B:defeatedcrowAppleBox=true
     B:defeatedcrowCharcoalcontainer=true
@@ -4834,6 +4880,38 @@ extracells {
     B:hardmedrive=false
     B:vibrantchamberfluid=false
     B:walrus=false
+}
+
+
+extratic {
+    B:blockFunStuff=true
+    B:blockFunStuff.1=true
+    B:blockFunStuff.2=true
+    B:liquidSilicon=false
+    B:moltenAdamantine=false
+    B:moltenBedrockium=false
+    B:moltenBrass=false
+    B:moltenConductiveIron=false
+    B:moltenDarkSteel=false
+    B:moltenDesh=false
+    B:moltenElectricalSteel=false
+    B:moltenElementium=false
+    B:moltenEnergeticAlloy=false
+    B:moltenFairy=false
+    B:moltenLudicrite=false
+    B:moltenManasteel=false
+    B:moltenOsmium=false
+    B:moltenPhasedGold=false
+    B:moltenPhasedIron=false
+    B:moltenPokefennium=false
+    B:moltenRedAurum=false
+    B:moltenRedstoneAlloy=false
+    B:moltenRefinedGlowstone=false
+    B:moltenSoularium=false
+    B:moltenTerrasteel=false
+    B:moltenVoidmetal=false
+    B:moltenZinc=false
+    B:moltenblutonium=false
 }
 
 
@@ -5798,6 +5876,7 @@ gardentrees {
     B:thinlog.12715=false
     B:thinlog.12716=false
     B:thinlog.1272=false
+    B:thinlog.1273=false
     B:thinlog.12741=false
     B:thinlog.12743=false
     B:thinlog.12766=false
@@ -5819,16 +5898,20 @@ gardentrees {
     B:thinlog.12873=false
     B:thinlog.1288=false
     B:thinlog.12883=false
+    B:thinlog.1289=false
     B:thinlog.12909=false
     B:thinlog.12919=false
     B:thinlog.13114=false
+    B:thinlog.13115=false
     B:thinlog.13150=false
+    B:thinlog.13151=false
     B:thinlog.13258=false
     B:thinlog.13259=false
     B:thinlog.13260=false
     B:thinlog.13261=false
     B:thinlog.13262=false
     B:thinlog.13263=false
+    B:thinlog.13264=false
     B:thinlog.13376=false
     B:thinlog.13382=false
     B:thinlog.13386=false
@@ -5857,9 +5940,11 @@ gardentrees {
     B:thinlog.13557=false
     B:thinlog.13558=false
     B:thinlog.13560=false
+    B:thinlog.13561=false
     B:thinlog.13573=false
     B:thinlog.13574=false
     B:thinlog.13576=false
+    B:thinlog.13577=false
     B:thinlog.169=false
     B:thinlog.176=false
     B:thinlog.182=false
@@ -5937,8 +6022,11 @@ gardentrees {
     B:thinlog.4885=false
     B:thinlog.4922=false
     B:thinlog.4923=false
+    B:thinlog.4924=false
     B:thinlog.4940=false
+    B:thinlog.4941=false
     B:thinlog.4958=false
+    B:thinlog.4959=false
     B:thinlog.5=false
     B:thinlog.5066=false
     B:thinlog.5067=false
@@ -5946,6 +6034,7 @@ gardentrees {
     B:thinlog.5069=false
     B:thinlog.5070=false
     B:thinlog.5071=false
+    B:thinlog.5072=false
     B:thinlog.5184=false
     B:thinlog.5190=false
     B:thinlog.5194=false
@@ -5974,9 +6063,11 @@ gardentrees {
     B:thinlog.5365=false
     B:thinlog.5366=false
     B:thinlog.5368=false
+    B:thinlog.5369=false
     B:thinlog.5381=false
     B:thinlog.5382=false
     B:thinlog.5384=false
+    B:thinlog.5385=false
     B:thinlog.561=false
     B:thinlog.562=false
     B:thinlog.563=false
@@ -6003,6 +6094,7 @@ gardentrees {
     B:thinlog.62050=false
     B:thinlog.621=false
     B:thinlog.62281=false
+    B:thinlog.62282=false
     B:thinlog.631=false
     B:thinlog.761=false
     B:thinlog.767=false
@@ -6013,15 +6105,19 @@ gardentrees {
     B:thinlog.789=false
     B:thinlog.826=false
     B:thinlog.827=false
+    B:thinlog.828=false
     B:thinlog.833=false
+    B:thinlog.834=false
     B:thinlog.8361=false
     B:thinlog.8403=false
     B:thinlog.844=false
+    B:thinlog.845=false
     B:thinlog.8603=false
     B:thinlog.8605=false
     B:thinlog.8619=false
     B:thinlog.862=false
     B:thinlog.8620=false
+    B:thinlog.863=false
     B:thinlog.8645=false
     B:thinlog.8647=false
     B:thinlog.8670=false
@@ -6043,13 +6139,16 @@ gardentrees {
     B:thinlog.8813=false
     B:thinlog.8823=false
     B:thinlog.9018=false
+    B:thinlog.9019=false
     B:thinlog.9054=false
+    B:thinlog.9055=false
     B:thinlog.9162=false
     B:thinlog.9163=false
     B:thinlog.9164=false
     B:thinlog.9165=false
     B:thinlog.9166=false
     B:thinlog.9167=false
+    B:thinlog.9168=false
     B:thinlog.9280=false
     B:thinlog.9286=false
     B:thinlog.9290=false
@@ -6078,15 +6177,18 @@ gardentrees {
     B:thinlog.9461=false
     B:thinlog.9462=false
     B:thinlog.9464=false
+    B:thinlog.9465=false
     B:thinlog.9477=false
     B:thinlog.9478=false
     B:thinlog.9480=false
+    B:thinlog.9481=false
     B:thinlog.970=false
     B:thinlog.971=false
     B:thinlog.972=false
     B:thinlog.973=false
     B:thinlog.974=false
     B:thinlog.975=false
+    B:thinlog.976=false
     B:thinlogfence=false
     B:thinlogfence.1=false
     B:thinlogfence.1088=false
@@ -6123,6 +6225,7 @@ gardentrees {
     B:thinlogfence.12715=false
     B:thinlogfence.12716=false
     B:thinlogfence.1272=false
+    B:thinlogfence.1273=false
     B:thinlogfence.12741=false
     B:thinlogfence.12743=false
     B:thinlogfence.12766=false
@@ -6144,16 +6247,20 @@ gardentrees {
     B:thinlogfence.12873=false
     B:thinlogfence.1288=false
     B:thinlogfence.12883=false
+    B:thinlogfence.1289=false
     B:thinlogfence.12909=false
     B:thinlogfence.12919=false
     B:thinlogfence.13114=false
+    B:thinlogfence.13115=false
     B:thinlogfence.13150=false
+    B:thinlogfence.13151=false
     B:thinlogfence.13258=false
     B:thinlogfence.13259=false
     B:thinlogfence.13260=false
     B:thinlogfence.13261=false
     B:thinlogfence.13262=false
     B:thinlogfence.13263=false
+    B:thinlogfence.13264=false
     B:thinlogfence.13376=false
     B:thinlogfence.13382=false
     B:thinlogfence.13386=false
@@ -6182,9 +6289,11 @@ gardentrees {
     B:thinlogfence.13557=false
     B:thinlogfence.13558=false
     B:thinlogfence.13560=false
+    B:thinlogfence.13561=false
     B:thinlogfence.13573=false
     B:thinlogfence.13574=false
     B:thinlogfence.13576=false
+    B:thinlogfence.13577=false
     B:thinlogfence.169=false
     B:thinlogfence.176=false
     B:thinlogfence.182=false
@@ -6262,8 +6371,11 @@ gardentrees {
     B:thinlogfence.4885=false
     B:thinlogfence.4922=false
     B:thinlogfence.4923=false
+    B:thinlogfence.4924=false
     B:thinlogfence.4940=false
+    B:thinlogfence.4941=false
     B:thinlogfence.4958=false
+    B:thinlogfence.4959=false
     B:thinlogfence.5=false
     B:thinlogfence.5066=false
     B:thinlogfence.5067=false
@@ -6271,6 +6383,7 @@ gardentrees {
     B:thinlogfence.5069=false
     B:thinlogfence.5070=false
     B:thinlogfence.5071=false
+    B:thinlogfence.5072=false
     B:thinlogfence.5184=false
     B:thinlogfence.5190=false
     B:thinlogfence.5194=false
@@ -6299,9 +6412,11 @@ gardentrees {
     B:thinlogfence.5365=false
     B:thinlogfence.5366=false
     B:thinlogfence.5368=false
+    B:thinlogfence.5369=false
     B:thinlogfence.5381=false
     B:thinlogfence.5382=false
     B:thinlogfence.5384=false
+    B:thinlogfence.5385=false
     B:thinlogfence.561=false
     B:thinlogfence.562=false
     B:thinlogfence.563=false
@@ -6328,6 +6443,7 @@ gardentrees {
     B:thinlogfence.62050=false
     B:thinlogfence.621=false
     B:thinlogfence.62281=false
+    B:thinlogfence.62282=false
     B:thinlogfence.631=false
     B:thinlogfence.761=false
     B:thinlogfence.767=false
@@ -6338,15 +6454,19 @@ gardentrees {
     B:thinlogfence.789=false
     B:thinlogfence.826=false
     B:thinlogfence.827=false
+    B:thinlogfence.828=false
     B:thinlogfence.833=false
+    B:thinlogfence.834=false
     B:thinlogfence.8361=false
     B:thinlogfence.8403=false
     B:thinlogfence.844=false
+    B:thinlogfence.845=false
     B:thinlogfence.8603=false
     B:thinlogfence.8605=false
     B:thinlogfence.8619=false
     B:thinlogfence.862=false
     B:thinlogfence.8620=false
+    B:thinlogfence.863=false
     B:thinlogfence.8645=false
     B:thinlogfence.8647=false
     B:thinlogfence.8670=false
@@ -6368,13 +6488,16 @@ gardentrees {
     B:thinlogfence.8813=false
     B:thinlogfence.8823=false
     B:thinlogfence.9018=false
+    B:thinlogfence.9019=false
     B:thinlogfence.9054=false
+    B:thinlogfence.9055=false
     B:thinlogfence.9162=false
     B:thinlogfence.9163=false
     B:thinlogfence.9164=false
     B:thinlogfence.9165=false
     B:thinlogfence.9166=false
     B:thinlogfence.9167=false
+    B:thinlogfence.9168=false
     B:thinlogfence.9280=false
     B:thinlogfence.9286=false
     B:thinlogfence.9290=false
@@ -6403,15 +6526,18 @@ gardentrees {
     B:thinlogfence.9461=false
     B:thinlogfence.9462=false
     B:thinlogfence.9464=false
+    B:thinlogfence.9465=false
     B:thinlogfence.9477=false
     B:thinlogfence.9478=false
     B:thinlogfence.9480=false
+    B:thinlogfence.9481=false
     B:thinlogfence.970=false
     B:thinlogfence.971=false
     B:thinlogfence.972=false
     B:thinlogfence.973=false
     B:thinlogfence.974=false
     B:thinlogfence.975=false
+    B:thinlogfence.976=false
 }
 
 
@@ -7749,6 +7875,7 @@ opencomputers {
     B:charger=false
     B:disassembler=false
     B:diskDrive=false
+    B:endstone=true
     B:geolyzer=false
     B:hologram1=false
     B:hologram2=false
@@ -8459,6 +8586,7 @@ progressiveautomation {
 
 
 props {
+    B:blockFake=false
     B:blockProps=false
 }
 
@@ -9511,8 +9639,21 @@ twilightforest {
     B:tileAuroraDoubleSlab=true
     B:tileAuroraPillar=true
     B:tileAuroraSlab=false
+    B:tileCastleBrick=true
+    B:tileCastleBrick.1=true
+    B:tileCastleBrick.2=true
+    B:tileCastleBrick.3=true
+    B:tileCastleMagic=true
+    B:tileCastleMagic.1=true
+    B:tileCastleMagic.2=true
+    B:tileCastleMagic.3=true
     B:tileDarkLeaves=true
     B:tileFluffyCloud=true
+    B:tileForceField=false
+    B:tileForceField.1=false
+    B:tileForceField.2=false
+    B:tileForceField.3=false
+    B:tileForceField.4=false
     B:tileGiantCobble=true
     B:tileGiantLeaves=false
     B:tileGiantLog=true
@@ -9522,6 +9663,10 @@ twilightforest {
     B:tileHugeStalk=true
     B:tileHugeWaterLily=false
     B:tileKnightmetalBlock=false
+    B:tileSlider=false
+    B:tileSlider.1=false
+    B:tileSlider.2=false
+    B:tileSlider.3=false
     B:tileTFAuroraBrick=true
     B:tileTFBurntThorns=false
     B:tileTFCicada=false
