--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -1186,6 +1186,18 @@ shedding {
     I:ThaumicHorizons.TaintEaterPig.metadata=0
     I:ThaumicHorizons.TaintEaterPig.rate=-1
 
+    # Configuration of Shedding for TwilightForest.Adherent
+    S:TwilightForest.Adherent.item=
+    I:TwilightForest.Adherent.lexiconDisplaySize=40
+    I:TwilightForest.Adherent.metadata=0
+    I:TwilightForest.Adherent.rate=-1
+
+    # Configuration of Shedding for TwilightForest.Apocalypse Cube
+    S:"TwilightForest.Apocalypse Cube.item"=
+    I:"TwilightForest.Apocalypse Cube.lexiconDisplaySize"=40
+    I:"TwilightForest.Apocalypse Cube.metadata"=0
+    I:"TwilightForest.Apocalypse Cube.rate"=-1
+
     # Configuration of Shedding for TwilightForest.Armored Giant
     S:"TwilightForest.Armored Giant.item"=
     I:"TwilightForest.Armored Giant.lexiconDisplaySize"=40
@@ -1203,8 +1215,6 @@ shedding {
     I:"TwilightForest.Block&Chain Goblin.lexiconDisplaySize"=40
     I:"TwilightForest.Block&Chain Goblin.metadata"=0
     I:"TwilightForest.Block&Chain Goblin.rate"=-1
-
-    # Configuration of Shedding for TwilightForest.Boggard
     S:TwilightForest.Boggard.item=
     I:TwilightForest.Boggard.lexiconDisplaySize=40
     I:TwilightForest.Boggard.metadata=0
