--- a/config/DCsAppleMilk.cfg
+++ b/config/DCsAppleMilk.cfg
@@ -117,6 +117,9 @@ potionid {
 ##########################################################################################################
 
 "render setting" {
+    # Enable Alternate Teppan Texture like a mesh grill.
+    B:"Enable Alt Teppan Texture"=false
+
     # Some food blocks are placed as a entity. If false, these are placed as a block. (just same as old version.)
     B:"Enable Edible Entity"=true
 
