--- a/config/Reika/ReactorCraft.cfg
+++ b/config/Reika/ReactorCraft.cfg
@@ -30,11 +30,11 @@
 
 "control setup" {
     B:"Fission Cores Chunkload When Active"=true
-    B:"Generate Calcite Ore Even If Other Mods Do"=true
-    B:"Generate Magnetite Ore Even If Other Mods Do"=true
+    B:"Generate Calcite Ore Even If Other Mods Do"=false
+    B:"Generate Magnetite Ore Even If Other Mods Do"=false
     B:"Generate Silver Ore Even If Other Mods Do"=false
-    I:"Ore Density Percentage"=100
-    I:"Ore Discretization"=1
+    I:"Ore Density Percentage"=0
+    I:"Ore Discretization"=2147483647
     B:"Rainbow Fluorite"=false
     B:"Retrogen Ores"=false
     I:"Toroid Spark Delay"=4
