--- a/config/TinkersConstruct.cfg
+++ b/config/TinkersConstruct.cfg
@@ -43,6 +43,9 @@ dimblacklist {
     # Generate slime islands in flat worlds
     B:genIslandsFlat=false
 
+    # Generate ores in flat worlds
+    B:genOresFlat=false
+
     # True: slime islands generate in overworld; False they do not generate
     B:slimeIslGenDim0=true
 }
@@ -166,8 +169,8 @@ worldgen {
 
 "worldgen disabler" {
     B:"Add Village Generation"=true
-    B:"Enable the Tinkers Villager to trade for oreberries"=true
-    B:"Generate Aluminum"=true
+    B:"Enable the Tinkers Villager to trade for oreberries"=false
+    B:"Generate Aluminum"=false
     B:"Generate Aluminum Bushes"=false
     B:"Generate Cobalt and Ardite"=true
     B:"Generate Copper"=false
