--- a/config/fastcraft.ini
+++ b/config/fastcraft.ini
@@ -1,5 +1,5 @@
 ; FastCraft config
-; created May 17, 2015 2:36:12 AM
+; created May 25, 2015 8:27:29 PM
 ;---
 
 ; Settings purely affecting performance, but not gameplay.
