--- a/config/ttCore/ttCore.cfg
+++ b/config/ttCore/ttCore.cfg
@@ -1,10 +1,21 @@
 # Configuration file
 
 enchants {
+    # Allow the Auto Smelt enchant to be registered.
+    B:allowAutoSmelt=true
+
+    # Allow the Auto Smelt enchant to work with Fortune.
+    B:allowAutoSmeltWithFortune=true
+
     # Allow the XP Boost enchant to be registered.
     B:allowXPBoost=true
 
+    # Enchant ID for the Auto Smelt enchant.
+    # §b[range: 0 - 255]
+    I:enchantIDAutoSmelt=44
+
     # Enchant ID for the XP boost enchant.
+    # §b[range: 0 - 255]
     I:enchantIDXPBoost=43
 }
 
@@ -13,13 +24,25 @@ general {
     # Disabling this option will prevent any crops added to the config json from being right clickable.
     B:allowCropRC=true
 
-    # The max amount of XP levels an anvil recipe can use
+    # The max amount of XP levels an anvil recipe can use.
     I:anvilMaxLevel=40
+
+    # The way the game should have been made (Yes this is the fireworks thing).
+    B:betterAchievements=true
+
+    # Controls the default sorting on the mod list GUI.
+    # 
+    # 0 - Default sort (load order)
+    # 1 - A to Z sort
+    # 2 - Z to A sort
+    # §b[range: 0 - 2]
+    I:defaultModSort=1
 
     # Removes all void fog.
     # 0 = off
     # 1 = DEFAULT worldtype only
     # 2 = all world types
+    # §b[range: 0 - 2]
     I:disableVoidFog=1
 
     # Show item registry names and other things in debug mode (f3+h)
@@ -27,19 +50,17 @@ general {
 
     # Show oredictionary names of every item in its tooltip.
     B:showOredictTooltips=false
-
-    # The way the game should have been made.
     B:superDuperFunMode=true
 
     # 0 - Do nothing
     # 1 - Remove stacktraces, leave 1-line missing texture errors
-    # 2 - Remove all missing texture errors completely
+    # 2 - Remove all missing texture errors completely. This option is not supported outside dev environments.
+    # §b[range: 0 - 2]
     I:textureErrorRemover=1
 }
 
 
 tweaks {
-    # Adds shapeless recipe from 1 book to 2 paper
     B:bookToPaperRecipe=true
 
     # Makes boats stack to 16
@@ -50,11 +71,7 @@ tweaks {
 
     # Allows packed ice to be mined with a pickaxe
     B:fixPackedIceTool=true
-
-    # Adds a shapeless recipe for paper
     B:shapelessPaperRecipe=true
-
-    # Adds recipes to turn any two slabs back into a full block
     B:slabToBlockRecipes=true
 }
 
