--- a/config/BigReactors/BigReactors.cfg
+++ b/config/BigReactors/BigReactors.cfg
@@ -41,7 +41,7 @@ recipes {
 
 
 worldgen {
-    B:GenerateYelloriteOre=true
+    B:GenerateYelloriteOre=false
     I:MaxYelloriteClustersPerChunk=2
     I:MaxYelloriteOrePerCluster=20
     I:YelloriteDimensionBlacklist <
@@ -49,7 +49,7 @@ worldgen {
     I:YelloriteMaxY=55
     I:dimensionWhitelist <
      >
-    B:enableWorldGen=true
+    B:enableWorldGen=false
     B:enableWorldGenInNegativeDims=false
     B:enableWorldRegeneration=false
     I:userWorldGenVersion=0
