--- a/config/Waila.cfg
+++ b/config/Waila.cfg
@@ -15,6 +15,8 @@ general {
     I:waila.cfg.posx=5000
     I:waila.cfg.posy=100
     I:waila.cfg.scale=100
+    B:waila.cfg.shiftblock=false
+    B:waila.cfg.shiftents=false
     B:waila.cfg.show=true
     B:waila.cfg.showmode=true
 }
@@ -89,7 +91,7 @@ modules {
     B:tcon.smeltery=true
     B:tcon.table=true
     B:thaumcraft.aspects=true
-    B:thermalexpansion.energyhandler=true
+    B:thermalexpansion.energyhandler=false
     B:thermalexpansion.owner=true
     B:vanilla.comparator=true
     B:vanilla.jukebox=true
