--- a/config/Galacticraft/core.conf
+++ b/config/Galacticraft/core.conf
@@ -59,7 +59,7 @@ general {
      >
 
     # If this is enabled, GC oil will be added to existing Overworld maps where possible.
-    B:"Retro Gen of GC Oil in existing map chunks"=true
+    B:"Retro Gen of GC Oil in existing map chunks"=false
 
     # If this is enabled, copper ore will generate on the overworld.
     B:"Enable Copper Ore Gen"=false
@@ -89,7 +89,7 @@ general {
     B:"Generate all other mods features on planets"=false
 
     # If generate other mods features is disabled as recommended, this setting can whitelist CoFHCore custom worldgen on planets.
-    B:"Whitelist CoFHCore worldgen to generate its ores and lakes on planets"=false
+    B:"Whitelist CoFHCore worldgen to generate its ores and lakes on planets"=true
 
     # If ThaumCraft is installed, ThaumCraft wild nodes can generate on the Moon and planets.
     B:"Generate ThaumCraft wild nodes on planetary surfaces"=true
