--- a/config/Galacticraft/power-GC3.conf
+++ b/config/Galacticraft/power-GC3.conf
@@ -4,9 +4,9 @@ compatibility {
     D:"BuildCraft Conversion Ratio"=16.0
     B:"Disable old Buildcraft API (MJ) interfacing completely?"=false
     D:"IndustrialCraft Conversion Ratio"=6.557376861572266
-    I:"Loss factor when converting energy as a percentage (100 = no loss, 90 = 10% loss ...)"=100
+    I:"Loss factor when converting energy as a percentage (100 = no loss, 90 = 10% loss ...)"=0
     D:"Mekanism Conversion Ratio"=0.6557376980781555
-    D:"RF Conversion Ratio"=1.600000023841858
+    D:"RF Conversion Ratio"=16000000
 }
 
 
@@ -14,7 +14,7 @@ display {
     B:"If BuildCraft is loaded, show Galacticraft machines energy as MJ instead of gJ?"=false
     B:"If IndustrialCraft2 is loaded, show Galacticraft machines energy as EU instead of gJ?"=false
     B:"If Mekanism is loaded, show Galacticraft machines energy as Joules (J) instead of gJ?"=false
-    B:"Show Galacticraft machines energy in RF instead of gJ?"=true
+    B:"Show Galacticraft machines energy in RF instead of gJ?"=false
 }
 
 
